--- a/index.html
+++ b/index.html
@@ -10,11 +10,7 @@
     <meta name="author" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="icon" href="favicon-16x16.png" type="image/x-icon" sizes="16x16">
-    <!-- build:css css/style.css-->
-    <link rel="stylesheet" href="style/libs.css">
-    <link rel="stylesheet" href="style/style.css">
-    <link rel="stylesheet" href="style/print.css">
-    <!-- endbuild-->
+    <link rel="stylesheet" href="css/style.css">
     <script src="js/modernizr.js"></script>
   </head>
   <body class="home">
@@ -79,7 +75,7 @@
               <h2 class="banner__title">Nguyen Huy Tuan</h2>
               <div class="banner__text">I'am frontend developers. I Love create beautiful Website. With me website like a house, One website are beauty and steady like one house beauty and steady.</div><a class="link link--2" href="#" title="Whe're there with you">About Me</a>
             </div>
-            <div class="image-me"><img src="./images/me.jpg" alt="fone">
+            <div class="image-me"><img src="../images/me.jpg" alt="fone">
             </div>
           </div>
         </div>
@@ -260,14 +256,8 @@
         <p>&copy; Copyright Tuan Nguyen 2016</p>
       </div>
     </footer>
-    <!-- build:js js/script.js-->
-    <script src="js/l10n.js"></script>
-    <script src="js/libs.js"></script>
     <script src="js/script.js"></script>
-    <!-- endbuild-->
-    <!-- build:development-only-->
-    <script src="//localhost:35729/livereload.js"></script>
-    <!-- endbuild-->
+
     <!--[if lte IE 9]><p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p><![endif]-->
     <noscript>JavaScript is off. Please enable to view full site.</noscript>
   </body>
