--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="main-header">
       <div class="container">
         <div class="navbar-header" data-menu>
-          <div class="logo"><a href="#" title="my cv"><img src="./images/images.jpg" alt="fone"></a>
+          <div class="logo"><a href="https://hutyuanzz.github.io/curriculum-vitae/" title="my cv"><img src="./images/images.jpg" alt="fone"></a>
           </div>
           <div class="main-nav__wrapper"><span class="icon-close icon main-nav__close hidden-md-up"></span>
             <ul class="main-nav">
@@ -36,11 +36,11 @@
                   <div class="social-header">
                     <div class="container none-padding-md-up">
                           <ul class="social-list">
-                            <li><a class="icon-twitter icon" href="#" title="twitter"></a>
+                            <li><a class="icon-twitter icon" href="https://twitter.com/huytuanzz" title="twitter"></a>
                             </li>
                             <li><a class="icon-picture icon" href="#" title="picture"></a>
                             </li>
-                            <li><a class="icon-face icon" href="#" title="face"></a>
+                            <li><a class="icon-face icon" href="https://www.facebook.com/tuan.huy.9" title="face"></a>
                             </li>
                           </ul>
                       <div class="link-page"><a class="link link--1" href="#" title="Me">Me</a><a class="link link--2" href="#" title="Want Me">Want Me</a>
@@ -50,9 +50,7 @@
                   <div class="links-header__wrapper">
                     <div class="container none-padding-md-up">
                           <ul class="links-header">
-                            <li class="active"><a href="#" title="My Cv">My Cv</a>
-                            </li>
-                            <li><a href="#" title="You">You</a>
+                            <li class="active"><a href="https://hutyuanzz.github.io/curriculum-vitae/" title="My cv">My cv</a>
                             </li>
                           </ul>
                     </div>
@@ -68,15 +66,14 @@
       </div>
     </header>
     <section class="banner">
-      <div class="banner__slider">
-        <div class="banner__item" style="background-image: url('./images/banner1.jpg')">
-          <div class="container">
-            <div class="banner__content">
-              <h2 class="banner__title">Nguyen Huy Tuan</h2>
-              <div class="banner__text">I'am frontend developers. I Love create beautiful Website. With me website like a house, One website are beauty and steady like one house beauty and steady.</div><a class="link link--2" href="#" title="Whe're there with you">About Me</a>
-            </div>
-            <div class="image-me"><img src="../images/me.jpg" alt="fone">
-            </div>
+      <div class="banner__slider"></div>
+      <div class="banner__item" style="background-image: url('./images/banner.jpg')">
+        <div class="container">
+          <div class="banner__content">
+            <h2 class="banner__title">Nguyen Huy Tuan</h2>
+            <div class="banner__text">I'm frontend developers. I Love create beautiful Website. With me website like a house, One website are beauty and steady like one house beauty and steady.</div><a class="link link--2 about-link" href="#" title="About Me">About Me</a>
+          </div>
+          <div class="image-me"><img src="./images/me.jpg" alt="fone">
           </div>
         </div>
       </div>
@@ -104,48 +101,48 @@
               <div class="info-online">
                 <h5 class="title-block">Info Online</h5>
                     <ul class="social-list">
-                      <li><a class="icon-twitter icon" href="#" title="twitter"></a>
+                      <li><a class="icon-twitter icon" href="https://twitter.com/huytuanzz" title="twitter"></a>
                       </li>
                       <li><a class="icon-picture icon" href="#" title="picture"></a>
                       </li>
-                      <li><a class="icon-face icon" href="#" title="face"></a>
+                      <li><a class="icon-face icon" href="https://www.facebook.com/tuan.huy.9" title="face"></a>
                       </li>
                     </ul>
               </div>
             </div>
             <div class="info-round">
               <div class="info-round-item">
-                <h5>Sở thích</h5>
+                <h5>Hobby</h5>
                 <p>Listen to music</p>
-                <p>esport</p>
+                <p>Esport</p>
                 <p>Painting</p>
-                <p>Đi du lịch với bạn bè</p>
-                <p>Nhìn gái đẹp</p>
+                <p>Travel with my friends</p>
+                <p>Read Book</p>
               </div>
               <div class="info-round-item">
-                <h5>smail-talent</h5>
-                <p>Thổi sáo</p>
-                <p>Đánh đàn</p>
+                <h5>Smail-talent</h5>
+                <p>Play flute</p>
+                <p>Play guitar</p>
               </div>
             </div>
           </div>
           <div class="tab-content" id="edu-content" style="display: none">
             <div class="edu">
               <div class="edu__item edu__item--1">
-                <div class="edu__year">9/2007</div>
-                <div class="edu__text"><span> Học tại: Trung học Phổ Thông Phước Vĩnh </span></div>
+                <div class="edu__year">9/2010</div>
+                <div class="edu__text"><span> I have studied in University Information Technology</span></div>
               </div>
               <div class="edu__item edu__item--2">
-                <div class="edu__year">9/2010</div>
-                <div class="edu__text"><span> Học Tại: Đại Học Công Nghệ Thông Tin </span></div>
+                <div class="edu__year">12/2015</div>
+                <div class="edu__text"><span> Graduated university </span></div>
               </div>
               <div class="edu__item edu__item--3">
-                <div class="edu__year"> 12/2015</div>
-                <div class="edu__text"> <span> Tốt Nghiệp Đại Học </span></div>
+                <div class="edu__year"> 9/2015</div>
+                <div class="edu__text"> <span> Worked at HuyPhu Company</span></div>
               </div>
               <div class="edu__item edu__item--4">
-                <div class="edu__year">9/2016</div>
-                <div class="edu__text"><span> Làm Việc Tại Sutrix Company </span></div>
+                <div class="edu__year">7/2016</div>
+                <div class="edu__text"><span> Worked at Sutrix Solutions Company </span></div>
               </div>
             </div>
           </div>
@@ -158,7 +155,7 @@
         <div class="skill-content" data-radial-progress>
           <div class="container">
             <div class="skill-wrapper text-center">
-              <div class="item-skill" data-value="90"></div>
+              <div class="item-skill" data-value="80"></div>
               <h3 class="title">HTML/CSS</h3>
             </div>
             <div class="skill-wrapper text-center">
@@ -166,7 +163,7 @@
               <h3 class="title">PHOTOSHOP</h3>
             </div>
             <div class="skill-wrapper text-center">
-              <div class="item-skill" data-value="80"></div>
+              <div class="item-skill" data-value="70"></div>
               <h3 class="title">JAVASCRIPT</h3>
             </div>
           </div>
@@ -183,36 +180,29 @@
           </div>
           <div class="project__item"><img src="./images/skippy.png" alt="fone">
           </div>
-          <div class="project__item"><img src="./images/tel.jpg" alt="fone">
-          </div>
           <div class="project__item"><img src="./images/nissn.jpg" alt="fone">
           </div>
         </div>
         <div class="project__content">
           <div class="project__content__item">
             <h3 class="project__title">HSBC</h3>
-            <div class="project__description"><span> Description </span>: dsadasdadadasd</div>
-            <div class="project__tasks"><span> Task </span>: Support HTML-CSS-JAVACREPP</div>
+            <div class="project__description"><span> Description </span>: Support small task. Create table about information product</div>
+            <div class="project__tasks"><span> Task </span>: Support HTML-CSS-JAVASCRIPT</div>
           </div>
           <div class="project__content__item">
             <h3 class="project__title">Anchor Kid</h3>
-            <div class="project__description"><span> Description </span>: dsadasdadadasd</div>
+            <div class="project__description"><span> Description </span>: Project about kid milk</div>
             <div class="project__tasks"><span>Task </span>: HTML-CSS</div>
           </div>
           <div class="project__content__item">
             <h3 class="project__title">Skippy</h3>
-            <div class="project__description"><span>Description</span> : dsadasdadadasd</div>
-            <div class="project__tasks"><span>Task </span>: HTML-CSS</div>
-          </div>
-          <div class="project__content__item">
-            <h3 class="project__title">Tellomsel drop</h3>
-            <div class="project__description"><span>Description</span>: dsadasdadadasd</div>
-            <div class="project__tasks"><span>Task</span>: HTML-CSS-JAVACREEP</div>
+            <div class="project__description"><span>Description</span> : Maintenance.</div>
+            <div class="project__tasks"><span>Task </span>: HTML-CSS-JAVASCRIPT</div>
           </div>
           <div class="project__content__item">
             <h3 class="project__title">Nissan</h3>
-            <div class="project__description"><span>Description</span>: Maintemamce</div>
-            <div class="project__tasks"><span>Task</span>: HTML-CSS-JAVACREEP</div>
+            <div class="project__description"><span>Description</span>: Maintemamce (Support small task).</div>
+            <div class="project__tasks"><span>Task</span>: HTML-CSS-JAVASCRIPT</div>
           </div>
         </div>
       </div>
@@ -237,23 +227,23 @@
             <div class="footer__around col-sm-4">
               <div class="footer__title">Around the web</div>
                   <ul class="social-list">
-                    <li><a class="icon-twitter icon" href="#" title="twitter"></a>
+                    <li><a class="icon-twitter icon" href="https://twitter.com/huytuanzz" title="twitter"></a>
                     </li>
                     <li><a class="icon-picture icon" href="#" title="picture"></a>
                     </li>
-                    <li><a class="icon-face icon" href="#" title="face"></a>
+                    <li><a class="icon-face icon" href="https://www.facebook.com/tuan.huy.9" title="face"></a>
                     </li>
                   </ul>
             </div>
             <div class="footer__work col-sm-4">
-              <div class="footer__title">Tuan Nguyen Frontend</div>
-              <p>Working in Sutrix Solution</p>
+              <div class="footer__title">Tuan Nguyen</div>
+              <p>Frontend Deverloper</p>
             </div>
           </div>
         </div>
       </div>
       <div class="footer__copyright">
-        <p>&copy; Copyright Tuan Nguyen 2016</p>
+        <p>&copy; Copyright TuanNguyen 2016</p>
       </div>
     </footer>
     <script src="js/script.js"></script>
