--- a/text.html
+++ b/text.html
@@ -17,7 +17,7 @@
     <header class="main-header">
       <div class="container">
         <div class="navbar-header" data-menu>
-          <div class="logo"><a href="#" title="my cv"><img src="./images/images.jpg" alt="fone"></a>
+          <div class="logo"><a href="https://hutyuanzz.github.io/curriculum-vitae/" title="my cv"><img src="./images/images.jpg" alt="fone"></a>
           </div>
           <div class="main-nav__wrapper"><span class="icon-close icon main-nav__close hidden-md-up"></span>
             <ul class="main-nav">
@@ -36,11 +36,11 @@
                   <div class="social-header">
                     <div class="container none-padding-md-up">
                           <ul class="social-list">
-                            <li><a class="icon-twitter icon" href="#" title="twitter"></a>
+                            <li><a class="icon-twitter icon" href="https://twitter.com/huytuanzz" title="twitter"></a>
                             </li>
                             <li><a class="icon-picture icon" href="#" title="picture"></a>
                             </li>
-                            <li><a class="icon-face icon" href="#" title="face"></a>
+                            <li><a class="icon-face icon" href="https://www.facebook.com/tuan.huy.9" title="face"></a>
                             </li>
                           </ul>
                       <div class="link-page"><a class="link link--1" href="#" title="Me">Me</a><a class="link link--2" href="#" title="Want Me">Want Me</a>
@@ -50,9 +50,7 @@
                   <div class="links-header__wrapper">
                     <div class="container none-padding-md-up">
                           <ul class="links-header">
-                            <li class="active"><a href="#" title="My Cv">My Cv</a>
-                            </li>
-                            <li><a href="#" title="You">You</a>
+                            <li class="active"><a href="https://hutyuanzz.github.io/curriculum-vitae/" title="My cv">My cv</a>
                             </li>
                           </ul>
                     </div>
@@ -133,23 +131,23 @@
             <div class="footer__around col-sm-4">
               <div class="footer__title">Around the web</div>
                   <ul class="social-list">
-                    <li><a class="icon-twitter icon" href="#" title="twitter"></a>
+                    <li><a class="icon-twitter icon" href="https://twitter.com/huytuanzz" title="twitter"></a>
                     </li>
                     <li><a class="icon-picture icon" href="#" title="picture"></a>
                     </li>
-                    <li><a class="icon-face icon" href="#" title="face"></a>
+                    <li><a class="icon-face icon" href="https://www.facebook.com/tuan.huy.9" title="face"></a>
                     </li>
                   </ul>
             </div>
             <div class="footer__work col-sm-4">
-              <div class="footer__title">Tuan Nguyen Frontend</div>
-              <p>Working in Sutrix Solution</p>
+              <div class="footer__title">Tuan Nguyen</div>
+              <p>Frontend Deverloper</p>
             </div>
           </div>
         </div>
       </div>
       <div class="footer__copyright">
-        <p>&copy; Copyright Tuan Nguyen 2016</p>
+        <p>&copy; Copyright TuanNguyen 2016</p>
       </div>
     </footer>
     <script src="js/script.js"></script>
